feat(ptz控制): 添加设备云台控制接口及相关逻辑
