# docs/swagger.yaml
@@ -772,6 +772,40 @@ paths:
       summary: 设备新增接口
       tags:
       - devices
+  /devices/ptz:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: 通过此接口控制设备云台方向和速度
+      parameters:
+      - description: 设备ID
+        in: formData
+        name: device_id
+        required: true
+        type: string
+      - description: 方向(halt,right,rightup,up,leftup,left,leftdown,down,rightdown,zoom,iris,focus)
+        in: formData
+        name: ptz_type
+        required: true
+        type: string
+      - description: 速度(1-255)
+        in: formData
+        name: speed
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            type: string
+        "1000":
+          description: ""
+          schema:
+            type: string
+      summary: 设备PTZ云台控制
+      tags:
+      - devices
   /streams:
     get:
       consumes:
